--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -503,7 +503,8 @@ After much excitement concerning the tales, they went to bed feeling happy.
     </string>
     <string name="title_activity_about">ABOUT AUTHOR</string>
     <string name="title_abt">About</string>
-    <string name = "about">Ayoola Olafenwa is a devoted Christian, programmer and a writer. She is an enthusiast of science and tech. Her love for nature inspires her to write Nature’s Twist.</string>
+    <string name = "about">Ayoola Olafenwa is a devoted Christian, programmer, an android developer and a writer. She is an enthusiast of science and tech.
+        Her love for nature inspires her to write Nature’s Twist.</string>
     <string name = "poem">
         NATURE:\n\n
 I look around,\n
